<resources>
    <string name="app_name">Organizer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title_notes">Notes</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">All notes</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="to_dos">To-dos</string>
    <string name="notes">Notes</string>
    <string name="textview">TextView</string>
    <string name="category">category</string>
    <string name="date">date</string>
    <string name="content">content</string>
    <string name="delete">Delete</string>


    <string name="all_notes"><font size="16">All notes</font></string>
    <string name="categories"><font size="20">Categories</font></string>
    <string name="travel"><font size="16">Travel</font></string>
    <string name="work"><font size="16">Work</font></string>
    <string name="life"><font size="16">Life</font></string>
    <string name="personal"><font size="16">Personal</font></string>
    <string name="no_category"><font size="16">No category</font></string>

    <string-array name="category_list">
        <item>No category</item>
        <item>Travel</item>
        <item>Personal</item>
        <item>Life</item>
        <item>Work</item>
    </string-array>

</resources>
