<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/all_notes"
            android:title="@string/all_notes"
            />
    </group>

    <item android:title="@string/categories">
        <menu>
            <item
                android:id="@+id/travel"
                android:title="@string/travel"
                />
            <item
                android:id="@+id/work"
                android:title="@string/work" />
            <item
                android:id="@+id/life"
                android:title="@string/life" />
            <item
                android:id="@+id/personal"
                android:title="@string/personal" />
            <item
                android:id="@+id/no_category"
                android:title="@string/no_category" />
        </menu>
    </item>

</menu>
