<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:id="@+id/parent_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/contentNote"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/content"
        android:textColor="#000"
        android:textSize="19sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/dateNote"
        android:textColor="#000"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/categoryNote"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="70dp"
        android:text="@string/category"
        android:textColor="#000"
        android:textSize="17sp" />

</RelativeLayout>